--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
-  "dependencies": {
-    "github-calendar": "^2.3.1"
-  }
+  "scripts": {
+    "cypress:run": "cypress run",
+    "cypress:open": "cypress open",
+    "start": ""
+  },
+  "dependencies": {}
 }
